# braille-archived

./: .gitignore  LICENSE  README.md  example_input.html  example_output.json  performance_test.py  pyproject.toml  tree_format.md
.github/workflows/: publish-pypi.yml
docs/: agent.md  prune_rules.md  selector.md  tree_format.md
examples/: README.md  google.ipynb  google.py  simple_html.ipynb
src/weblite/: __init__.py  weblite.py
src/weblite/adapters/: __init__.py  source_element.py  source_page.py
src/weblite/adapters/playwright/: __init__.py  element.py  page.py
src/weblite/elements/: base.py  constants.py  display.py  factory.py  utils.py
src/weblite/elements/content/: __init__.py  base.py  button.py  svg.py  textarea.py
src/weblite/elements/empty/: base.py  img.py  input.py
src/weblite/interfaces/: __init__.py  web_element.py  web_page.py
src/weblite/selector/: __init__.py
src/weblite/tree/: __init__.py  builder.py  display_pruner.py
src/weblite/utils/: __init__.py  display_pruner.py  formatting.py  source_to_element.py  visibility_filter.py
tests/fixtures/: simple_test.html
