[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weblite"
version = "0.1.0"
authors = [{name = "Steve Wang", email = "stevewang.at.work@gmail.com"}]
description = "A text-based web representation that retains meaningful structure information while displaying only human-visible content"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
]
keywords = ["web-automation", "playwright", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/steve-z-wang/weblite"
Issues = "https://github.com/steve-z-wang/weblite/issues"
Repository = "https://github.com/steve-z-wang/weblite.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]